update 보유과정-정산 비교 기능
